--- a/app/src/main/res/layout/activity_form_transaction.xml
+++ b/app/src/main/res/layout/activity_form_transaction.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context=".module.adminspv.FormTransactionActivity">
+    tools:context=".module.md.FormTransactionActivity">
     <include android:id="@+id/toolbar" layout="@layout/toolbar" />
     <ScrollView
         android:layout_width="match_parent"
